syntax = "proto3";


option go_package = "./test_grpc;test_grpc";

message ParserTestRequest {
    string file_path = 1;
    string file_format = 2;
}

message ParserTestResponse {
    string file_path = 1;
    string file_format = 2;
}

service ParserTestService {
    rpc Parser(ParserTestRequest) returns (ParserTestResponse) {}
}
